2012-11-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* buspirate.c: Replace outdated FSF postal address by a reference to
	the GPL info on their website.
	* jtagmkII.c: (Dito.)
	* avrftdi.c: (Dito.)
	* wiring.c: (Dito.)
	* linux_ppdev.h: (Dito.)
	* serbb.h: (Dito.)
	* usbtiny.h: (Dito.)
	* confwin.c: (Dito.)
	* buspirate.h: (Dito.)
	* avrftdi.h: (Dito.)
	* wiring.h: (Dito.)
	* jtagmkII.h: (Dito.)
	* pickit2.c: (Dito.)
	* config.c: (Dito.)
	* term.c: (Dito.)
	* confwin.h: (Dito.)
	* avrdude.1: (Dito.)
	* windows/Makefile.am: (Dito.)
	* config.h: (Dito.)
	* pickit2.h: (Dito.)
	* term.h: (Dito.)
	* tools/get-hv-params.xsl: (Dito.)
	* tools/get-stk600-cards.xsl: (Dito.)
	* tools/get-stk600-devices.xsl: (Dito.)
	* tools/get-dw-params.xsl: (Dito.)
	* butterfly.c: (Dito.)
	* configure.ac: (Dito.)
	* doc/Makefile.am: (Dito.)
	* pgm_type.c: (Dito.)
	* butterfly.h: (Dito.)
	* jtagmkI.c: (Dito.)
	* ft245r.c: (Dito.)
	* COPYING: (Dito.)
	* pgm_type.h: (Dito.)
	* jtagmkI.h: (Dito.)
	* pindefs.h: (Dito.)
	* config_gram.y: (Dito.)
	* arduino.c: (Dito.)
	* arduino.h: (Dito.)
	* ser_win32.c: (Dito.)
	* serbb_win32.c: (Dito.)
	* avr910.c: (Dito.)
	* stk500.c: (Dito.)
	* freebsd_ppi.h: (Dito.)
	* avr910.h: (Dito.)
	* solaris_ecpp.h: (Dito.)
	* stk500.h: (Dito.)
	* jtagmkII_private.h: (Dito.)
	* avrdude.h: (Dito.)
	* bitbang.c: (Dito.)
	* bitbang.h: (Dito.)
	* avrpart.c: (Dito.)
	* safemode.c: (Dito.)
	* stk500generic.c: (Dito.)
	* serial.h: (Dito.)
	* avrpart.h: (Dito.)
	* jtagmkI_private.h: (Dito.)
	* ppi.c: (Dito.)
	* avr.c: (Dito.)
	* safemode.h: (Dito.)
	* stk500generic.h: (Dito.)
	* ser_avrdoper.c: (Dito.)
	* avr.h: (Dito.)
	* ppi.h: (Dito.)
	* usbasp.c: (Dito.)
	* lists.c: (Dito.)
	* stk500v2.c: (Dito.)
	* my_ddk_hidsdi.h: (Dito.)
	* tpi.h: (Dito.)
	* usbasp.h: (Dito.)
	* lists.h: (Dito.)
	* stk500v2.h: (Dito.)
	* ppiwin.c: (Dito.)
	* fileio.c: (Dito.)
	* ser_posix.c: (Dito.)
	* fileio.h: (Dito.)
	* serbb_posix.c: (Dito.)
	* usbdevs.h: (Dito.)
	* par.c: (Dito.)